Bug 1249040 - Allow wheel scrolls to accumulate in the presence of scroll snapping. r=kats

MozReview-Commit-ID: EUyGvkoyu8I